@@ -1,3 +1,4 @@
 [B]Version 1.1.151[/B]
 - xfreehd - domain change, fix login
 - pornhub - fix categories
+- xhamster - fix playback & thumbnails
